# CTFToolkit

./: .gitignore  README.md  crypto_utils.py  pyproject.toml  tests.py
canary-tool/: __init__.py
canary-tool/canary_tool/: __init__.py  canary.py  cli.py  discover.py  target.py
canary-tool/tests/: test_canary.py
canary_tool/: __init__.py  canary.py  cli.py  discover.py  target.py
canary_tool/tests/: test_canary.py  test_cli.py  test_target.py
crypto_utils/: __init__.py  basic.py  tests.py
rop_tool/: __init__.py  chain.py  cli.py  gadgets.py  store.py
rop_tool/tests/: test_gadgets.py  test_store.py
rop_tool/tests/data/: ropg_badbytes.txt  ropg_sample.txt
web_utils/: http.py
